test/spec_vectors/table/ok/module_5.wat
(module (table 0 65536 funcref))