test/spec_vectors/table/fail/module_31.wat
(module (type $t (func)) (table 0 (ref $t)))